[gd_scene load_steps=22 format=3 uid="uid://cd84k1gmfwuai"]

[ext_resource type="Script" path="res://Scene/Player/player.gd" id="1_rtlec"]
[ext_resource type="Texture2D" uid="uid://cwmn37j3p8jww" path="res://Sprites/Player/Idle.png" id="2_g2qqp"]
[ext_resource type="Texture2D" uid="uid://sp0ysnkw05fb" path="res://Sprites/Player/Player_Ctrl.png" id="2_h4qjj"]
[ext_resource type="Texture2D" uid="uid://c35nsv3qwmy8v" path="res://Sprites/Player/Fear.png" id="3_i1inu"]
[ext_resource type="Texture2D" uid="uid://dwv067qvibt41" path="res://Sprites/Player/Walk_1.png" id="3_o1w8t"]
[ext_resource type="PackedScene" uid="uid://bbg2y234yn5rt" path="res://Scene/Inventory/inventory.tscn" id="3_u0v28"]
[ext_resource type="Texture2D" uid="uid://cf7pvrw1eipkf" path="res://Sprites/Player/Idle_3.png" id="4_4y8ic"]
[ext_resource type="Texture2D" uid="uid://cya5iqcefsqof" path="res://Sprites/Player/Feer_2.png" id="4_b2om1"]
[ext_resource type="Texture2D" uid="uid://cv8h0k71vw6rt" path="res://Sprites/Player/Walk_2.png" id="4_rktv0"]
[ext_resource type="Texture2D" uid="uid://ca1mt0mqt5ogr" path="res://Sprites/Player/Walk_3.png" id="5_cn3nd"]
[ext_resource type="Texture2D" uid="uid://cbqyy58n7g2ed" path="res://Sprites/Player/Idle_1.png" id="5_gi8vp"]
[ext_resource type="Texture2D" uid="uid://cs6inkt4um50r" path="res://Sprites/Player/Walk_4.png" id="6_eawa6"]
[ext_resource type="Texture2D" uid="uid://dal3jhttam3e0" path="res://Sprites/Player/Idle_2.png" id="6_x20hr"]
[ext_resource type="FontFile" uid="uid://dmbmqei025mxu" path="res://Paper.otf" id="12_8obb1"]
[ext_resource type="AudioStream" uid="uid://cqb4fsdubanno" path="res://Sounds/Step.mp3" id="15_3yf1d"]

[sub_resource type="SpriteFrames" id="SpriteFrames_hvroq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_h4qjj")
}],
"loop": false,
"name": &"ctrl",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_i1inu")
}, {
"duration": 1.0,
"texture": ExtResource("3_i1inu")
}, {
"duration": 1.0,
"texture": ExtResource("3_i1inu")
}, {
"duration": 1.0,
"texture": ExtResource("3_i1inu")
}, {
"duration": 1.0,
"texture": ExtResource("4_b2om1")
}, {
"duration": 1.0,
"texture": ExtResource("4_b2om1")
}, {
"duration": 1.0,
"texture": ExtResource("4_b2om1")
}, {
"duration": 1.0,
"texture": ExtResource("4_b2om1")
}, {
"duration": 1.0,
"texture": ExtResource("4_b2om1")
}, {
"duration": 1.0,
"texture": ExtResource("4_b2om1")
}, {
"duration": 1.0,
"texture": ExtResource("4_b2om1")
}, {
"duration": 1.0,
"texture": ExtResource("4_b2om1")
}, {
"duration": 1.0,
"texture": ExtResource("4_b2om1")
}, {
"duration": 1.0,
"texture": ExtResource("4_b2om1")
}, {
"duration": 1.0,
"texture": ExtResource("4_b2om1")
}, {
"duration": 1.0,
"texture": ExtResource("4_b2om1")
}, {
"duration": 1.0,
"texture": ExtResource("4_b2om1")
}, {
"duration": 1.0,
"texture": ExtResource("4_b2om1")
}, {
"duration": 1.0,
"texture": ExtResource("4_b2om1")
}, {
"duration": 1.0,
"texture": ExtResource("4_b2om1")
}, {
"duration": 1.0,
"texture": ExtResource("4_b2om1")
}, {
"duration": 1.0,
"texture": ExtResource("4_b2om1")
}, {
"duration": 1.0,
"texture": ExtResource("4_b2om1")
}, {
"duration": 1.0,
"texture": ExtResource("4_b2om1")
}, {
"duration": 1.0,
"texture": ExtResource("4_b2om1")
}],
"loop": false,
"name": &"fear",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_g2qqp")
}, {
"duration": 1.0,
"texture": ExtResource("2_g2qqp")
}, {
"duration": 1.0,
"texture": ExtResource("2_g2qqp")
}, {
"duration": 1.0,
"texture": ExtResource("2_g2qqp")
}, {
"duration": 1.0,
"texture": ExtResource("2_g2qqp")
}, {
"duration": 1.0,
"texture": ExtResource("2_g2qqp")
}, {
"duration": 1.0,
"texture": ExtResource("4_4y8ic")
}, {
"duration": 1.0,
"texture": ExtResource("2_g2qqp")
}, {
"duration": 1.0,
"texture": ExtResource("2_g2qqp")
}, {
"duration": 1.0,
"texture": ExtResource("2_g2qqp")
}, {
"duration": 1.0,
"texture": ExtResource("2_g2qqp")
}, {
"duration": 1.0,
"texture": ExtResource("2_g2qqp")
}, {
"duration": 1.0,
"texture": ExtResource("2_g2qqp")
}, {
"duration": 1.0,
"texture": ExtResource("2_g2qqp")
}, {
"duration": 1.0,
"texture": ExtResource("2_g2qqp")
}, {
"duration": 1.0,
"texture": ExtResource("2_g2qqp")
}, {
"duration": 1.0,
"texture": ExtResource("2_g2qqp")
}, {
"duration": 1.0,
"texture": ExtResource("2_g2qqp")
}, {
"duration": 1.0,
"texture": ExtResource("2_g2qqp")
}, {
"duration": 1.0,
"texture": ExtResource("4_4y8ic")
}, {
"duration": 1.0,
"texture": ExtResource("2_g2qqp")
}, {
"duration": 1.0,
"texture": ExtResource("2_g2qqp")
}, {
"duration": 1.0,
"texture": ExtResource("2_g2qqp")
}, {
"duration": 1.0,
"texture": ExtResource("2_g2qqp")
}, {
"duration": 1.0,
"texture": ExtResource("2_g2qqp")
}, {
"duration": 1.0,
"texture": ExtResource("2_g2qqp")
}, {
"duration": 1.0,
"texture": ExtResource("5_gi8vp")
}, {
"duration": 1.0,
"texture": ExtResource("5_gi8vp")
}, {
"duration": 1.0,
"texture": ExtResource("5_gi8vp")
}, {
"duration": 1.0,
"texture": ExtResource("6_x20hr")
}, {
"duration": 1.0,
"texture": ExtResource("6_x20hr")
}, {
"duration": 1.0,
"texture": ExtResource("6_x20hr")
}, {
"duration": 1.0,
"texture": ExtResource("4_4y8ic")
}, {
"duration": 1.0,
"texture": ExtResource("2_g2qqp")
}, {
"duration": 1.0,
"texture": ExtResource("2_g2qqp")
}, {
"duration": 1.0,
"texture": ExtResource("2_g2qqp")
}, {
"duration": 1.0,
"texture": ExtResource("2_g2qqp")
}, {
"duration": 1.0,
"texture": ExtResource("2_g2qqp")
}, {
"duration": 1.0,
"texture": ExtResource("2_g2qqp")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_o1w8t")
}, {
"duration": 1.0,
"texture": ExtResource("4_rktv0")
}, {
"duration": 1.0,
"texture": ExtResource("5_cn3nd")
}, {
"duration": 1.0,
"texture": ExtResource("6_eawa6")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wbnx5"]
radius = 6.46875

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0u4a5"]
size = Vector2(62, 194)

[sub_resource type="Animation" id="Animation_1jno1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Text_player:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_cur82"]
resource_name = "Text_puzzle"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Text_player:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Text_player:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hcqdd"]
_data = {
"RESET": SubResource("Animation_1jno1"),
"Text_puzzle": SubResource("Animation_cur82")
}

[node name="Player" type="CharacterBody2D" groups=["Language", "Player"]]
z_index = 1
collision_layer = 2
collision_mask = 45
script = ExtResource("1_rtlec")

[node name="Player_sprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
scale = Vector2(0.8, 0.8)
sprite_frames = SubResource("SpriteFrames_hvroq")
animation = &"fear"
autoplay = "idle"

[node name="Light" type="Node2D" parent="."]
unique_name_in_owner = true
visible = false
z_index = 1
scale = Vector2(2, 2)

[node name="ColorRect" type="ColorRect" parent="Light"]
offset_left = -2880.0
offset_top = -1930.0
offset_right = -150.0
offset_bottom = 2162.0
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="Light"]
offset_left = -486.0
offset_top = 35.0
offset_right = 1707.0
offset_bottom = 3326.0
rotation = -1.86227
color = Color(0, 0, 0, 1)

[node name="ColorRect3" type="ColorRect" parent="Light"]
offset_left = 2635.0
offset_top = 915.0
offset_right = 5140.0
offset_bottom = 4264.0
rotation = 1.86219
color = Color(0, 0, 0, 1)

[node name="Collision_player" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
position = Vector2(-6.5, 174.3)
rotation = 1.5708
scale = Vector2(3.2, 3.2)
shape = SubResource("CapsuleShape2D_wbnx5")

[node name="Inventory" parent="." instance=ExtResource("3_u0v28")]

[node name="Area_on_monster" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 16

[node name="Collision_player_on_monster" type="CollisionShape2D" parent="Area_on_monster"]
unique_name_in_owner = true
position = Vector2(0, -9)
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_0u4a5")
debug_color = Color(0.86782, 0.331234, 0.330571, 0.42)

[node name="Text_player" type="Label" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -134.0
offset_top = -314.0
offset_right = 137.0
offset_bottom = -215.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("12_8obb1")
theme_override_font_sizes/font_size = 48
text = "Никак"
horizontal_alignment = 1
vertical_alignment = 1
visible_characters = 0
visible_ratio = 0.0

[node name="Animation_text" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_hcqdd")
}

[node name="Audio_step" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("15_3yf1d")
volume_db = -10.0
bus = &"Sounds"
